micro-svc/chapter-files/traffic-management/redirect.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: advertisement-route
spec:
  hosts:
  - advertisement
  http:
  - match:
    - uri:
        prefix: /ad
    redirect:
      uri: /maintenanced
      authority: advertisement.weather.svc.cluster.local
