micro-svc/chapter-files/traffic-management/vs-recommendation-fault-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-route
spec:
  hosts:
  - recommendation
  http:
  - fault:
      delay:
        fixedDelay: 4s
        percent: 100
    route:
    - destination:
        host: recommendation
        subset: v1
